[package]
name = "netra-cli"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.2.0"
chrono = "0.4.24"
toml = "0.7.6"
serde = { version = "1.0.183", features = ["derive"] }
clap = { version = "4.3.23", features = ["derive"] }
